--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
  <section class='container'>
   <hgroup>
-    <h1>Welcome to your static nginx application on OpenShift</h1>
+    <h1>Shermbo - Welcome to your static nginx application on OpenShift CRC</h1>
   </hgroup>
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
@@ -230,7 +230,7 @@
     </section>
   </div> 
   <footer>
-    <div class="logo"><a href="https://www.openshift.com/"></a></div>
+    <div class="logo2"><a href="https://www.openshift.com/"></a></div>
   </footer>
 </section>
 
