--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     </section>
   </div> 
   <footer>
-    <div class="logo2"><a href="https://www.openshift.com/"></a></div>
+    <div class="logo2"><img src="https://s3.amazonaws.com/media.coniston.org/images/cc14_top_image.png" /></div>
   </footer>
 </section>
 
