--- a/index.html
+++ b/index.html
@@ -190,10 +190,11 @@
   </hgroup>
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
+      <h2>To update this app!</h2>
       <section>
         <h2>Deploying code changes</h2>
           <p>To change this application, update your code and rebuild/redeploy the image.</p>
-      </section>
+      </section>      
     </section>
     <section class="col-xs-12 col-sm-6 col-md-6">
       <h3>For more information and help</h3>
