Added link to CRC Console

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <h1>Terpsoft CRC / Openshift</h1>
   <div>
-    <p>Body text here.</p>
+    <h2><a href="https://console-openshift-console.apps-crc.testing">Link to CRC Console</a></h2>
   </div> 
 
 </body>
