--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Terpsoft CRC / OpenShift </title>
+  <link rel="stylesheet" href="https://use.typekit.net/xyp4pmw.css">
 <style>
 .header {
   font-size: 34px;
+  text-align: center;
+  font-family: elza, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.mid {
+  font-size: 24px;
+  text-align: center;
+  font-family: elza, sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 #banner_img {
@@ -15,14 +28,41 @@
   margin-bottom: 20%
 }
 
+/*
+Elza Bold
+font-family: elza, sans-serif;
+font-weight: 700;
+font-style: normal;
+
+Elza Bold Oblique
+font-family: elza, sans-serif;
+font-weight: 700;
+font-style: italic;
+
+Elza Oblique
+font-family: elza, sans-serif;
+font-weight: 400;
+font-style: italic;
+
+Elza Regular
+font-family: elza, sans-serif;
+font-weight: 400;
+font-style: normal;
+
+
+
+
+*/
 </style>
 
 </head>
 <body>
-  <div class="header"><img id="banner_img" src="https://s3.amazonaws.com/media.coniston.org/images/cc14_top_image.png" /></div>
+  <div class="header">
+    <img id="banner_img" src="https://s3.amazonaws.com/media.coniston.org/images/cc14_top_image.png" />
+    <h1>Terpsoft CRC / Openshift</h1>
+  </div>
 
-  <h1>Terpsoft CRC / Openshift</h1>
-  <div>
+  <div class="mid">
     <h2><a href="https://console-openshift-console.apps-crc.testing">Link to CRC Console</a></h2>
   </div> 
 
